Add variables from ui

--- a/less/site.less
+++ b/less/site.less
@@ -1,2 +1,20 @@
 // Modules and Variables
 @import "modules/steps";
+// Structure and base elements
+// Imports
+@import "modules/colors";
+@import "modules/grid";
+@import "modules/framework";
+@import "modules/variables";
+@import "modules/type";
+@import "modules/navigation";
+@import "modules/boxes";
+
+// Vendors
+@import "vendor/normalize";
+
+// Partials
+@import "partials/utility";
+@import "partials/lists";
+@import "partials/icons";
+
