--- a/less/modules/panels.less
+++ b/less/modules/panels.less
@@ -5,7 +5,13 @@
  *
  */
 
-.dap-panel {
+/************************************************************************
+ * Base – the unstyled panel example (assuming we can use a white background on the content page.
+ */
+
+.callout {
+    background-color: @white;
+    border: 1px solid @beta-blue-light;
     margin-bottom: 0.75em;
     padding: (@box-padding-vertical * 1.2);
 }
@@ -13,7 +19,7 @@
 /**
  * Things within each panel.
  */
-.dap-panel__title {
+.callout__title {
     font-size: @font-size-medium;
     font-weight: @font-weight-bolder;
     color: @text-color;
@@ -21,47 +27,32 @@
     line-height: @line-height-large;
 }
 
-.dap-panel__subtitle {
+.callout__subtitle {
     font-size: @font-size-base;
     font-weight: @font-weight-bolder;
     margin: 0 0 (@paragraph-margin-bottom * 0.7) 0;
+    color: @text-color;
 }
 
 
 /************************************************************************
  * Variations on panel styling.
- * Extend dap-panel standards
+ * Extend callout standards
  */
-/************************************************************************
- * Base – the unstyled panel example (assuming we can use a white background on the content page.
- */
-
-.dap-panel--base {
-    background-color: @white;
-    border: 1px solid @beta-blue-light;
-
-    .dap-panel__title {
-        color: @text-color;
-    }
-
-    .dap-panel__subtitle {
-        color: @text-color;
-    }
-}
 
 /************************************************************************
  * Crucial – this is for only the most important mandatory tasks, we must use this sparingly.
  */
 
-.dap-panel--crucial {
+.callout--crucial {
     background-color: lighten(@beta-red, 55%);
     border: 1px solid @beta-red;
 
-    .dap-panel__title {
+    .callout__title {
         color: @beta-red;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 }
@@ -69,15 +60,15 @@
  * Important – these are for generally important actions clients need to take but are not mandatory.
  */
 
-.dap-panel--important {
+.callout--important {
     background-color: lighten(@heritage-blue, 70%);
     border: 1px solid @heritage-blue;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
@@ -86,15 +77,15 @@
  * Progress panel - for instructional information, primarily used for 'Next stages'.
  */
 
-.dap-panel--progress {
+.callout--progress {
     background-color: lighten(@beta-aqua, 10%);
     border-left: 4px solid @beta-aqua;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
@@ -103,15 +94,15 @@
  * Adviser box - extending to style the adviser only content.
  */
 
-.dap-panel--adviser {
+.callout--adviser {
     background-color: @beta-yellow-light;
     border-left: 4px solid @beta-yellow;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
@@ -121,15 +112,15 @@
  * Example box - extending to style the adviser only content.
  */
 
-.dap-panel--example {
+.callout--example {
     background-color: @white;
     border-left: 4px solid @gray-4;
 
-    .dap-panel__title {
+    .callout__title {
         color: @gray-2;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
@@ -137,42 +128,42 @@
 /************************************************************************
  * Side-panels.
  */
-.dap-panel--side__blue {
+.callout--side__blue {
     background-color: lighten(@gray-4, 15%);
     border-top: 4px solid @heritage-blue;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
 }
 
-.dap-panel--side__yellow {
+.callout--side__yellow {
     background-color: lighten(@gray-4, 15%);
     border-top: 4px solid @beta-yellow;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 }
 
-.dap-panel--side__aqua {
+.callout--side__aqua {
     background-color: lighten(@gray-4, 15%);
     border-top: 4px solid @beta-aqua;
 
-    .dap-panel__title {
+    .callout__title {
         color: @heritage-blue;
     }
 
-    .dap-panel__subtitle {
+    .callout__subtitle {
         color: @text-color;
     }
 
