--- a/less/site.less
+++ b/less/site.less
@@ -6,9 +6,9 @@
 @import "modules/grid";
 @import "modules/framework";
 @import "modules/variables";
-@import "modules/type";
+//@import "modules/type";
 @import "modules/navigation";
-@import "modules/boxes";
+@import "modules/callout";
 
 // Vendors
 @import "vendor/normalize";
