--- a/less/option2.less
+++ b/less/option2.less
@@ -12,5 +12,14 @@
 		background-position: center left;
 		background-repeat: no-repeat;
 		background-color: #DCE5F2;
+		font-weight: 700;
+		strong {
+			font-weight: 700;
+		}
 	}
+}
+
+section {
+	border-top: 1px solid #EEEEEE;
+	margin-top: 20px;
 }
