--- a/less/accordion.less
+++ b/less/accordion.less
@@ -1,3 +1,29 @@
 .accordion-toggle {cursor: pointer;}
 .accordion-content {display: none;}
 .accordion-content.default {display: block;}
+
+#accordion {
+	background-color: white !important;
+	.accordion-toggle {
+		margin-bottom: 0.75em !important;
+		background-color: #004B88;
+		color: white;
+		border-color: #253460;
+		&:after {
+			background-color: #253460;
+			color: white;
+			content: "\f067";
+		}
+	}
+	.open:after {
+		content: "\f068";
+	}
+	.accordion-content {
+		padding: 0;
+		border: 0;
+	    margin: -0.75em -1em 0.75em -1em !important;
+	    padding: 0 1em 2em 1em;
+	    border: solid #253460;
+	    border-width: 0px 1px 1px 1px;
+	}
+}
