--- a/css/accordion.css
+++ b/css/accordion.css
@@ -21,6 +21,15 @@
   color: white;
   content: "\f067";
 }
+#accordion .accordion-toggle h1,
+#accordion .accordion-toggle h2,
+#accordion .accordion-toggle h3,
+#accordion .accordion-toggle h4,
+#accordion .accordion-toggle h5,
+#accordion .accordion-toggle h6 {
+  margin: 0;
+  color: white !important;
+}
 #accordion .open:after {
   content: "\f068";
 }
@@ -28,13 +37,19 @@
   padding: 0;
   border: 0;
   margin: -0.75em -1em 0.75em -1em !important;
-  padding: 0 1em 1em 1em;
+  padding: 0.75em 1em 0.75em 1em;
   border: solid #253460;
   border-width: 0px 1px 1px 1px;
 }
 #accordion .accordion-toggle-close {
   cursor: pointer;
+  border: none;
+  background-color: rgba(0, 75, 136, 0.1);
+  color: #004B88;
+  margin-top: 1.5em !important;
 }
-#accordion .accordion-toggle-close:before {
-  content: "\f00d";
+#accordion .accordion-toggle-close:after {
+  background-color: rgba(37, 52, 96, 0.1);
+  content: "\f068";
+  color: #253460;
 }
