--- a/css/option3.css
+++ b/css/option3.css
@@ -3,9 +3,8 @@
  */
 .steps {
   margin: 0.75em 0;
-  background-color: #f3f4f5;
-  color: #191926;
-  border-top: 4px #004b88 solid;
+  background-color: #fff;
+  color: #333;
 }
 .steps h1,
 .steps h2,
@@ -14,32 +13,30 @@
 .steps h5,
 .steps h6
  {
-  color: #191926;
+  color: #333;
   padding: 0.5em 1em 0em 0.75em;
   margin-bottom: 0.5em !important;
+    border-bottom: 1px dashed #fff;
 }
 .steps__link {
     cursor: pointer;
     width: 100%;
     display: block;
-    margin: 0.2em 0em !important;
-    padding: 0em 1em 0em 1em;
+    margin: 0.5em 0em !important;
+    padding: 0.5em 1em 1em 1em;
     border: none;
-    background-color: #f3f4f5;
-/*    border-bottom: 1px dashed #fff;*/
+    background-color: #EFF3F3;
+    text-decoration: none !important;
 }
 .steps__link:hover {
     cursor: pointer;
     width: 100%;
     display: block;
-    margin: 0.2em 0em !important;
-    padding: 0em 1em 0em 1em;
-    border: none;
-    background-color: #BDC3C7;
+    background-color: #A5BDDC;
 /*    border-bottom: 1px dashed #fff;*/
 }
 span.steps-1 {
-  color: #999;
+  color: #fff;
   display: inline-block;
   font-weight: bold;
   line-height: 1em;
@@ -47,11 +44,11 @@ span.steps-1 {
   margin-right: 0.5em;
 }
 span.steps--number {
-  background: #cccccc;
+  background: #fff;
   border-radius: 0.8em;
   -moz-border-radius: 0.8em;
   -webkit-border-radius: 1.8em;
-  color: #ffffff;
+  color: #004b88;
   display: inline-block;
   font-weight: 700;
   line-height: 1em;
@@ -69,7 +66,7 @@ span.steps--number {
   border-radius: 0.8em;
   -moz-border-radius: 0.8em;
   -webkit-border-radius: 1.8em;
-  color: #999;
+  color: #004b88;
   display: inline-block;
   font-weight: bold;
   line-height: 1em;
@@ -107,10 +104,21 @@ span.steps--number {
     padding: 0.5em 1em 0.5em 2em;
     border: none;
     background-color: #f3f4f5;
-    border-bottom: 1px dashed #fff;
+    border-bottom: 1px solid #fff;
+    text-decoration: none !important;
 }
 .steps--navigation__link:hover {
-    background-color: #ffffff;
+    background-color: #A5BDDC;
+}
+.steps--navigation__link--active {
+    cursor: pointer;
+    width: 100%;
+    display: block;
+    padding: 0.5em 1em 0.5em 2em;
+    border: none;
+    background-color: #A5BDDC;
+    border-bottom: 1px solid #fff;
+    text-decoration: none !important;
 }
 span.steps--navigation-1 {
   color: #999;
@@ -130,7 +138,4 @@ span.steps--navigation--number {
   margin-top: 0.5em;
   margin-left: -1.2em;
   border-top: 0px #004b88 solid;
-}
-.steps--navigation__link:hover  span.steps--navigation--number {
-  color: #999;
 }
